bug fix and custom scrollbar for chrome

--- a/pages/Home/home.css
+++ b/pages/Home/home.css
@@ -8,8 +8,8 @@ body{
 }
 
 .wrapper{
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh; */
+  /* width: 100vw; */
   background-color: #030b20;;
   /* display: flex;
   align-items: center;
